# testGetCarTrack

./: .gitignore  .~lock.wulingCalibPoint.xlsx#  CMakeLists.txt  README.md
include/: CSVRow.h  ToolsBox.h  bA.h  bA.h.bak  fusionCommonData.h  getAngle.h  getCarInWitchLane.h  getXYWithGeometry.h  getXYWithHomograph.h  getXYawPitch.h  wgs84_3degreeGauss.h  wheelDR.h
src/: CSVRow.cpp  ToolsBox.cpp  bA.cpp  bA.cpp.bak  getAngle.cpp  getCarInWitchLane.cpp  getXYWithGeometry.cpp  getXYWithHomograph.cpp  getXYawPitch.cpp  testBA.cpp  testBA.cpp.bak  testGetCarInWitchLane.cpp  testGetCarTrackXY.cpp  testGetXYSignWithGeometry.cpp  testGetXYWithGeometry.cpp  testGetXYWithHomograph.cpp  testSortRoadData.cpp  testWheelDR.cpp  wgs84_3degreeGauss.cpp  wheelDR.cpp
